+ Created Recipes page. + Added nav bar for home and recipe pages.

--- a/odin-recipes/recipes.html
+++ b/odin-recipes/recipes.html
@@ -5,7 +5,9 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>CSS Styles Example</title>
+
     <link rel="stylesheet" href="styles.css">
 
     <nav>
@@ -14,11 +16,10 @@
     </nav>
 
 </head>
-
 <body>
 
-    <h1>Odin Recipes</h1>
-    <p>This is a simple recipe website where you can find delicious recipes.</p>
+    <h1>Apple Cider Hawaiian Roll Donut's</h1>
+    <p>Try these apple cider stuffed Hawaiian rolls that are reminiscent of apple donuts. Enjoy the warm, fluffy texture and the sweet apple filling!</p>
 
 </body>
 
