Fixed the nav bar not working for recipe's page by correcting the routing path.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>CSS Styles Example</title>
+
     <link rel="stylesheet" href="styles.css">
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="recipes.html">Recipes</a>
+        <a href="./odin-recipes/recipes.html">Recipes</a>
     </nav>
 
 </head>
