--- a/odin-recipes/recipes.html
+++ b/odin-recipes/recipes.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="styles.css">
 
     <nav>
-        <a href="index.html">Home</a>
-        <a href="recipes.html">Recipes</a>
+        <a href="/index.html">Home</a>
+        <a href="./recipes.html">Recipes</a>
     </nav>
 
 </head>
