--- a/odin-recipes/recipes.html
+++ b/odin-recipes/recipes.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>CSS Styles Example</title>
+    <title>Recipes</title>
 
     <link rel="stylesheet" href="styles.css">
 
@@ -19,7 +19,31 @@
 <body>
 
     <h1>Apple Cider Hawaiian Roll Donut's</h1>
+    <img src="../pictures/apple-cider-donut.jpg" alt="Apple Cider Donut">
     <p>Try these apple cider stuffed Hawaiian rolls that are reminiscent of apple donuts. Enjoy the warm, fluffy texture and the sweet apple filling!</p>
+    <br>
+    <h2>Ingredients:</h2>
+    <ul>
+        <li>1 12 Pack Hawaiian Rolls</li>
+        <li>1 cup apple pie filling</li>
+        <li>1/2 cup sugar</li>
+        <li>1 teaspoon cinnamon</li>
+        <li>1/4 teaspoon nutmeg</li>
+        <li>1/4 teaspoon alpine spice powder</li>
+        <li>5 tablespoons butter, divided</li>
+        <li>1 tablespoon butter, melted</li>
+    </ul>
+    <br>
+    <h2>Steps:</h2>
+    <ol>
+        <li>Preheat your oven to 350°F (175°C).</li>
+        <li>Separate Hawaiian rolls and cut a 1/2-inch slit in the side of each one. Use a finger or the end of a spoon to create a larger opening and a space large enough to fill each roll with about 1 tablespoon filling.</li>
+        <li>Roughly chop apple pie filling and add to a bowl. Stir in 1 packet apple cider mix. Spoon filling into the prepared rolls.</li>
+        <li>Melt 4 tablespoons butter and brush each roll on all sides with melted butter. Place rolls on a lined baking sheet.  </li>
+        <li>Bake rolls in the preheated oven until lightly toasted and golden brown, 12 to 14 minutes.</li>
+        <li>Meanwhile, stir together remaining apple cider packet, sugar, and cinnamon in a shallow dish and melt remaining butter.</li>
+        <li>Brush tops of rolls evenly with melted butter and coat each roll in sugar mixture.</li>
+    </ol>
 
 </body>
 
