+ Changed the structure of the pages by having each recipe on it's own page. - Renamed the recipes page. + Added a new recipe to the nav bar. + Added a new image to pictures folder for new recipe.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="./odin-recipes/recipes.html">Recipes</a>
+        <a href="./odin-recipes/apple-donut.html">Apple Donut</a>
+        <a href="./odin-recipes/shrimp-stir-fry.html">Shrimp Stir Fry</a>
     </nav>
 
 </head>
