--- a/odin-recipes/apple-donut.html
+++ b/odin-recipes/apple-donut.html
@@ -12,7 +12,8 @@
 
     <nav>
         <a href="/index.html">Home</a>
-        <a href="./recipes.html">Recipes</a>
+        <a href="./apple-donut.html">Apple Donut</a>
+        <a href="./shrimp-stir-fry.html">Shrimp Stir Fry</a>
     </nav>
 
 </head>
